# arcium-blind-auctions

./: .gitignore  Anchor.toml  README.md  package.json
artifacts/: circuits_hash.txt
encrypted-ixs/: Cargo.toml  auctions.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auction/[pubkey]/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/components/: AuctionCard.tsx  AuctionStatus.tsx  BidForm.tsx  CreateAuctionForm.tsx  Nav.tsx  Providers.tsx  RevealPanel.tsx
frontend/src/hooks/: useAuction.ts  useAuctions.ts  useBidRecord.ts  useCastBid.ts  useClaimCredits.ts  useCloseAuction.ts  useCreateAuction.ts  useCredits.ts  useMyBids.ts  useRefundCredit.ts  useSettleAuction.ts  useWithdrawEscrow.ts
frontend/src/idl/: blind_auctions.json  blind_auctions.ts
frontend/src/lib/: constants.ts  encrypt.ts  pda.ts  program.ts
frontend/src/shims/: node-empty.ts
migrations/: deploy.ts
programs/blind-auctions/: Cargo.toml
programs/blind-auctions/src/: lib.rs
scripts/: check-comp-defs.ts  fix-circuits.ts  init-comp-defs.ts
tests/: blind-auctions.ts
